[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/glam/sources/ambient_cg/icon.png" type="Texture" id=1]
[ext_resource path="res://addons/glam/editor_panel/editor_panel.gd" type="Script" id=2]
[ext_resource path="res://addons/glam/controls/query_bar/query_bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/glam/icon_glam.svg" type="Texture" id=4]
[ext_resource path="res://addons/glam/sources/freesound/icon.png" type="Texture" id=5]
[ext_resource path="res://addons/glam/sources/pixabay/icon.png" type="Texture" id=6]

[node name="AssetPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 250 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 26.0

[node name="SourceSelect" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 26.0
rect_min_size = Vector2( 150, 0 )
text = "ambientCG"
icon = ExtResource( 1 )
items = [ "ambientCG", ExtResource( 1 ), false, 0, null, "Freesound", ExtResource( 5 ), false, 1, null, "Pixabay", ExtResource( 6 ), false, 2, null ]
selected = 0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 158.0
margin_bottom = 26.0

[node name="QueryBar" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 162.0
margin_right = 943.0

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 947.0
margin_right = 951.0
margin_bottom = 26.0

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 955.0
margin_right = 1024.0
margin_bottom = 26.0
text = "GLAM"
icon = ExtResource( 4 )
items = [ "Generate Licenses", null, 0, false, false, 0, 0, null, "", false, "Generate CREDITS.md", null, 0, false, false, 2, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourcePanels" type="Control" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/SourceSelect" to="." method="select_source"]
[connection signal="submitted" from="VBoxContainer/SourcePanels/SourcePanel2/Authentication" to="VBoxContainer/SourcePanels/SourcePanel2/Authentication" method="_on_submitted"]
